Rename classes to signify their roles

--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -52,16 +52,16 @@
     <Compile Include="Internal\CipherOperations\SwapCipherOperation.cs" />
     <Compile Include="Internal\VideoContext.cs" />
     <Compile Include="Models\PlaylistInfo.cs" />
-    <Compile Include="Models\VideoCaption.cs" />
-    <Compile Include="Models\VideoCaptionTrack.cs" />
-    <Compile Include="Models\VideoCaptionTrackInfo.cs" />
-    <Compile Include="Models\VideoDashManifestInfo.cs" />
+    <Compile Include="Models\ClosedCaption.cs" />
+    <Compile Include="Models\ClosedCaptionTrack.cs" />
+    <Compile Include="Models\ClosedCaptionTrackInfo.cs" />
+    <Compile Include="Models\DashManifestInfo.cs" />
     <Compile Include="Models\VideoInfo.cs" />
-    <Compile Include="Models\VideoStreamAdaptiveMode.cs" />
-    <Compile Include="Models\VideoStreamInfo.cs" />
-    <Compile Include="Models\VideoStreamQuality.cs" />
-    <Compile Include="Models\VideoStreamResolution.cs" />
-    <Compile Include="Models\VideoStreamType.cs" />
+    <Compile Include="Models\AdaptiveMode.cs" />
+    <Compile Include="Models\MediaStreamInfo.cs" />
+    <Compile Include="Models\VideoQuality.cs" />
+    <Compile Include="Models\Resolution.cs" />
+    <Compile Include="Models\ContainerType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DefaultRequestService.cs" />
     <Compile Include="Services\IRequestService.cs" />
