--- a/YoutubeExplodeDemoWpf/packages.config
+++ b/YoutubeExplodeDemoWpf/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net452" />
-  <package id="MaterialDesignThemes" version="2.3.0-ci815" targetFramework="net452" />
+  <package id="MaterialDesignThemes" version="2.3.0.823" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.4.0-alpha" targetFramework="net452" />
-  <package id="Tyrrrz.Extensions" version="1.0.5" targetFramework="net452" />
+  <package id="Tyrrrz.Extensions" version="1.2" targetFramework="net452" />
   <package id="Tyrrrz.WpfExtensions" version="1.0.5" targetFramework="net452" />
 </packages>
