--- a/YoutubeExplodeTests/YoutubeExplodeTests.csproj
+++ b/YoutubeExplodeTests/YoutubeExplodeTests.csproj
@@ -56,6 +56,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="YoutubeClientUnitTests.cs" />
     <Compile Include="YoutubeClientIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
