--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Internal\CipherOperations\SwapCipherOperation.cs" />
     <Compile Include="Internal\VideoContext.cs" />
     <Compile Include="Models\ExtendedVideoInfo.cs" />
+    <Compile Include="Models\PlaylistType.cs" />
     <Compile Include="Models\UserInfo.cs" />
     <Compile Include="Models\MediaStream.cs" />
     <Compile Include="Models\PlaylistInfo.cs" />
