Add progress reporting and cancellation to extensions

--- a/YoutubeExplodeDemoWpf/YoutubeExplodeDemoWpf.csproj
+++ b/YoutubeExplodeDemoWpf/YoutubeExplodeDemoWpf.csproj
@@ -126,11 +126,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Resources\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="favicon.ico" />
   </ItemGroup>
