--- a/YoutubeExplodeDemoWpf/YoutubeExplodeDemoWpf.csproj
+++ b/YoutubeExplodeDemoWpf/YoutubeExplodeDemoWpf.csproj
@@ -91,8 +91,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\BoolToStringConverter.cs" />
     <Compile Include="Locator.cs" />
-    <Compile Include="Converters\FileSizeConverter.cs" />
+    <Compile Include="Converters\FileSizeToStringConverter.cs" />
     <Compile Include="ViewModels\IMainViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
