--- a/YoutubeExplode.DemoWpf/YoutubeExplode.DemoWpf.csproj
+++ b/YoutubeExplode.DemoWpf/YoutubeExplode.DemoWpf.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>YoutubeExplode.DemoWpf</RootNamespace>
-    <AssemblyName>YoutubeExplodeDemoWpf</AssemblyName>
+    <AssemblyName>YoutubeExplode.DemoWpf</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
