--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.1.14" />
     <PackageReference Include="MSTest.TestFramework" Version="1.1.14" />
+    <PackageReference Include="Tyrrrz.Extensions" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
