--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
     <AssemblyName>YoutubeExplode.Tests</AssemblyName>
     <RootNamespace>YoutubeExplode.Tests</RootNamespace>
   </PropertyGroup>
