--- a/DemoConsole/DemoConsole.csproj
+++ b/DemoConsole/DemoConsole.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>netcoreapp1.1</TargetFramework>
     <AssemblyName>YoutubeExplode.DemoConsole</AssemblyName>
     <RootNamespace>YoutubeExplode.DemoConsole</RootNamespace>
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Tyrrrz.Extensions" Version="1.3" />
+    <PackageReference Include="Tyrrrz.Extensions" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
