--- a/YoutubeExplode/YoutubeExplode.csproj
+++ b/YoutubeExplode/YoutubeExplode.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.1;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard1.1;net45;netcoreapp1.0</TargetFrameworks>
     <AssemblyName>YoutubeExplode</AssemblyName>
     <RootNamespace>YoutubeExplode</RootNamespace>
     <PackageId>YoutubeExplode</PackageId>
