Make integration tests data driven

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -22,6 +22,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data\Integration_ChannelIds.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Integration_PlaylistIds.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Integration_VideoIds_HasCC.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Integration_VideoIds_NonExisting.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Integration_VideoIds.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Data\Validation_ChannelIds_Invalid.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
