Add test case for Youtube Red videos

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -31,6 +31,9 @@
     <None Update="Data\Integration_VideoIds_HasCC.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Data\Integration_VideoIds_Paid.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Data\Integration_VideoIds_NonExisting.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
