--- a/DemoWpf/DemoWpf.csproj
+++ b/DemoWpf/DemoWpf.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{21F838B4-11B6-4C54-957A-9B7EFDE8F19E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>YoutubeExplode.DemoWpf</RootNamespace>
-    <AssemblyName>YoutubeExplode.DemoWpf</AssemblyName>
+    <RootNamespace>DemoWpf</RootNamespace>
+    <AssemblyName>DemoWpf</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
